--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.0')
+    testImplementation('org.mockito:mockito-core:2.26.0')
+    testImplementation('org.mockito:mockito-junit-jupiter:2.26.0') /* 애노테이션 사용한 모의 객체 생성 가능 */
     /* testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter' */
 }
